<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">We Pay Rewards</string>
    <string name="class_prompt">Choose a Class</string>

    <string-array name="student_class">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
        <item>Sixth</item>
        <item>Seventh</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="action_balance">Balance R</string>
    <string name="action_logout">Log Out</string>
    <string name="action_addto">Add To</string>
    <string name="address">The users Delivery address comes here.</string>
    <string name="thank_you">Thank you, your transaction has been successfully executed</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_agentid">Agent ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_agentid">This agent id is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_meternumberlength">Meter Number must be 4 digit long minimum and 13 digit long maximum.</string>
    <string name="error_invalid_amountvalue">You cannot pay for less than R20.</string>
    <string name="permission_rationale">Contacts permissions are needed for providing emai completions.</string>
    <string name="error_massage"> Amount is above your cash back.</string>


    <string name="title_paired_devices">Add Printer</string>
    <string name="title_other_devices">Other useful equipment</string>
    <string name="button_scan">Scanning device</string>
    <string name="scanning">Scanning Device&#8230;</string>
    <string name="none_paired">No matching devices</string>
    <string name="none_found">No device found</string>
    <string name="select_device">Select the connected device</string>
    <string name="not_connected">Please connect a Bluetooth printer</string>
    <string name="bt_not_enabled_leaving">Bluetooth does not start</string>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">Is not connected</string>
    <string name="Connecting">It is connected to a Bluetooth printer</string>

    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="energy_kwh">Energy KWh</string>
    <string name="no_category_found">No category found</string>
    <string name="credit_vend_tax_invoice">CREDIT VEND - TAX INVOICE</string>
    <string name="action_printertest">Printer Test</string>
    <string name="title_activity_transaction_history">Transaction History</string>
    <string name="transaction_history_title">Transaction History</string>
    <string name="cash_mini_statement_title">Cash Up Mini Statement</string>
    <string name="your_cash_back_balance">Total Sales for the day </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trading_balance">Traiding Balance : R24 | Cash Back : R100</string>
</resources>
