<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.artitech.tsalano.tukisha.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/agentid_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_weight="0.74"
                android:contentDescription=""
                android:src="@drawable/wepay" />

            <EditText
                android:id="@+id/agentid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username   (Your E-mail Address)"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#89D443" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"

                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#89D443" />


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="16dp"
                android:background="#0099cc"
                android:text="@string/action_sign_in"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/registerButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="16dp"
                android:background="#0099cc"
                android:text="RegisTER"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <!--<Button-->
                <!--android:id="@+id/takeatour"-->
                <!--style="?android:textAppearanceSmall"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="40dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:background="#0099cc"-->
                <!--android:text="Getting Started"-->
                <!--android:textColor="#FFFFFF"-->
                <!--android:textStyle="bold" />-->

            <TextView
                android:id="@+id/resertpasword"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="102dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0.74"
                android:textSize="15dp"
                android:textAlignment="textEnd"
                android:text="Forgot Password?"
                android:textColor="#0099cc"
                />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
